# transcripts-to-gemini

./: pyproject.toml
utils/: txt_to_batches.py  verify_batches.py
